--- a/views/index.hbs
+++ b/views/index.hbs
@@ -87,7 +87,7 @@
         <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
         <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
 
-        <<<<<<< HEAD=======>>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+
       </div>
       {{!-- <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
         <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -118,12 +118,11 @@
         </div>
         <div class="w3-quarter">
           <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-          <<<<<<< HEAD <a href="http://localhost:3000/rankings">Clourpop</a>
-            =======
-            >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
-            <p class="w3-large">Design</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore.</p>
+          HEAD <a href="http://localhost:3000/rankings">Clourpop</a>
+
+          <p class="w3-large">Design</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore.</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
@@ -133,216 +132,212 @@
         </div>
       </div>
     </div>
-    <<<<<<< HEAD======={{!-- <!DOCTYPE html>
-      <html>
+    {{!--
+    <!DOCTYPE html>
+    <html>
 
-      <head>
-        <style>
-          body {
-            background-image: url('makeupcollage.jpg');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-          }
-        </style>
-      </head>
-
-      <div class="index-selection">
-        <h1>{{title}} 🚀</h1>
-
-
-      </div> --}}
-
-
-      {{!-- <style>
+    <head>
+      <style>
         body {
           background-image: url('makeupcollage.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
         }
-      </style> --}}
+      </style>
+    </head>
 
-      {{!-- <h1 style="text-align: center;"></h1> --}}
-
-      {{!-- <a href="/about"> About Us</a>
-
-      <a href="/auth/signup"> Sign-Up</a>
-      <a href="/auth/login"> Login</a> --}}
-
-      {{!-- <a href="/rankings"> Product Search</a>
-      <a href="/user/profile">Profile Page</a> --}}
-
-      {{!-- <h1>{{title}} 🚀</h1>
-      <p>Welcome Ironhacker!</p> --}}
+    <div class="index-selection">
+      <h1>{{title}} 🚀</h1>
 
 
-
-      {{!-- <a href="/auth/login"> Login</a> --}}
-
+    </div> --}}
 
 
-      {{!--
-      <a href="/rankings/edit/{{id}}">Edit</a>
+    {{!-- <style>
+      body {
+        background-image: url('makeupcollage.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style> --}}
 
-      <a href="/rankings/delete/{{id}}">Delete</a>
+    {{!-- <h1 style="text-align: center;"></h1> --}}
 
-      <a href="/rankings/delete/{{id}}">Delete</a> --}}
+    {{!-- <a href="/about"> About Us</a>
 
+    <a href="/auth/signup"> Sign-Up</a>
+    <a href="/auth/login"> Login</a> --}}
 
-      {{!-- <a href="/auth/login"> Login</a> --}}
+    {{!-- <a href="/rankings"> Product Search</a>
+    <a href="/user/profile">Profile Page</a> --}}
 
-      {{!-- <a href="/product"> Products List </a>
-      <a href="/collection/create"> Create Collection </a> --}}
-
-
-      >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+    {{!-- <h1>{{title}} 🚀</h1>
+    <p>Welcome Ironhacker!</p> --}}
 
 
 
-      {{!--
-      <!DOCTYPE html>
-      <html>
-
-      <head>
-        <style>
-          body {
-            background-image: url('makeupcollage.jpg');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-          }
-        </style>
-      </head>
-
-      <div class="index-selection">
-        <h1>{{title}} 🚀</h1>
+    {{!-- <a href="/auth/login"> Login</a> --}}
 
 
-      </div> --}}
+
+    {{!--
+    <a href="/rankings/edit/{{id}}">Edit</a>
+
+    <a href="/rankings/delete/{{id}}">Delete</a>
+
+    <a href="/rankings/delete/{{id}}">Delete</a> --}}
 
 
-      {{!-- <style>
+    {{!-- <a href="/auth/login"> Login</a> --}}
+
+    {{!-- <a href="/product"> Products List </a>
+    <a href="/collection/create"> Create Collection </a> --}}
+
+
+
+
+
+
+    {{!--
+    <!DOCTYPE html>
+    <html>
+
+    <head>
+      <style>
         body {
           background-image: url('makeupcollage.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
         }
-      </style> --}}
+      </style>
+    </head>
 
-      {{!-- <h1 style="text-align: center;"></h1> --}}
-
-      {{!-- <a href="/about"> About Us</a>
-
-      <a href="/auth/signup"> Sign-Up</a>
-      <a href="/auth/login"> Login</a> --}}
-
-      {{!-- <a href="/rankings"> Product Search</a>
-      <a href="/user/profile">Profile Page</a> --}}
-
-      <<<<<<< HEAD {{!-- <h1>{{title}} 🚀</h1>
-        <p>Welcome Ironhacker!</p> --}}
+    <div class="index-selection">
+      <h1>{{title}} 🚀</h1>
 
 
-
-        {{!-- <a href="/auth/login"> Login</a> --}}
-
+    </div> --}}
 
 
-        {{!--
-        <a href="/rankings/edit/{{id}}">Edit</a>
+    {{!-- <style>
+      body {
+        background-image: url('makeupcollage.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style> --}}
 
-        <a href="/rankings/delete/{{id}}">Delete</a>
+    {{!-- <h1 style="text-align: center;"></h1> --}}
 
-        <a href="/rankings/delete/{{id}}">Delete</a> --}}
+    {{!-- <a href="/about"> About Us</a>
 
+    <a href="/auth/signup"> Sign-Up</a>
+    <a href="/auth/login"> Login</a> --}}
 
-        {{!-- <a href="/auth/login"> Login</a> --}}
+    {{!-- <a href="/rankings"> Product Search</a>
+    <a href="/user/profile">Profile Page</a> --}}
 
-        {{!-- <a href="/product"> Products List </a>
-        <a href="/collection/create"> Create Collection </a> --}}
+    {{!-- <h1>{{title}} 🚀</h1>
+    <p>Welcome Ironhacker!</p> --}}
 
 
 
-
-        <p><a href="#about" id="learn-text"
-            class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
-            more and start today</a></p>
-
-        <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" alt="">
+    {{!-- <a href="/auth/login"> Login</a> --}}
 
 
 
-        =======
-        <p><a href="#about" id="learn-text"
-            class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
-            more and start today</a></p>
+    {{!--
+    <a href="/rankings/edit/{{id}}">Edit</a>
 
-        <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" alt="">
+    <a href="/rankings/delete/{{id}}">Delete</a>
+
+    <a href="/rankings/delete/{{id}}">Delete</a> --}}
+
+
+    {{!-- <a href="/auth/login"> Login</a> --}}
+
+    {{!-- <a href="/product"> Products List </a>
+    <a href="/collection/create"> Create Collection </a> --}}
+
+
+    <div class="container">
+      <a href="#about" id="learn-text" class="centered">Learn
+        more and start today</a>
+
+      <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" width="1550" alt="">
+
+    </div>
+
+    <style>
+      .container {
+        position: relative;
+        text-align: center;
+        color: white;
+        font-size: 100px;
+      }
+
+      .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
 
 
 
-        >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
-        {{!--
-        <!-- Image of location/map -->
-        <img src="https://gisgeography.com/wp-content/uploads/2020/06/Miami-Map-Feature.jpg"
-          class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+
+    {{!--
+    <!-- Image of location/map -->
+    <img src="https://gisgeography.com/wp-content/uploads/2020/06/Miami-Map-Feature.jpg" class="w3-image w3-greyscale"
+      style="width:100%;margin-top:48px">
   </div>
   </div> --}}
 
 
   <!-- Footer -->
-  <<<<<<< HEAD=======>>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
-    <footer class="w3-center w3-black w3-padding-64">
-      <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-      <div class="w3-xlarge w3-section">
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        <i class="fa fa-instagram w3-hover-opacity"></i>
-        <i class="fa fa-snapchat w3-hover-opacity"></i>
-        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-        <i class="fa fa-twitter w3-hover-opacity"></i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-      </div>
-      <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
-          class="w3-hover-text-green">Ironhack</a></p>
-    </footer>
 
-    {{!--
-    <script>
-      // Modal Image Gallery
-      function onClick(element) {
-        document.getElementById("img01").src = element.src;
-        document.getElementById("modal01").style.display = "block";
-        var captionText = document.getElementById("caption");
-        captionText.innerHTML = element.alt;
-      }
-    </script> --}}
-    <<<<<<< HEAD=======<footer class="w3-center w3-black w3-padding-64">
-      <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-      <div class="w3-xlarge w3-section">
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        <i class="fa fa-instagram w3-hover-opacity"></i>
-        <i class="fa fa-snapchat w3-hover-opacity"></i>
-        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-        <i class="fa fa-twitter w3-hover-opacity"></i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-      </div>
-      <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
-          class="w3-hover-text-green">Ironhack</a></p>
-      </footer>
 
-      {{!--
-      <script>
-        // Modal Image Gallery
-        function onClick(element) {
-          document.getElementById("img01").src = element.src;
-          document.getElementById("modal01").style.display = "block";
-          var captionText = document.getElementById("caption");
-          captionText.innerHTML = element.alt;
-        }
-      </script> --}}
-      >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+
+  {{!--
+  <script>
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+  </script> --}}
+  <footer class="w3-center w3-black w3-padding-64">
+    <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <div class="w3-xlarge w3-section">
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+    <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
+        class="w3-hover-text-green">Ironhack</a></p>
+  </footer>
+
+  {{!--
+  <script>
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+  </script> --}}
+
 
 
 </body>
