--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -75,7 +75,7 @@
             <li class="nav-item"> <a class="nav-link" href="/rankings">Product search</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/create"> Create Collection </a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/collection//create"> Create Collection </a> </li>
             <li class="nav-item"> <a class="nav-link" href="/user/profile"> Profile Page </a> </li>
 
 
