--- a/views/index.hbs
+++ b/views/index.hbs
@@ -118,12 +118,20 @@
         </div>
         <div class="w3-quarter">
           <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-          <<<<<<< HEAD <a href="http://localhost:3000/rankings">Clourpop</a>
-            =======
-            >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+
+           <a href="http://localhost:3000/rankings">Clourpop</a>
+
+          <p class="w3-large">Design</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore.</p>
+
+         <a href="http://localhost:3000/rankings">Clourpop</a>
+          
+           22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
             <p class="w3-large">Design</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore.</p>
+
         </div>
         <div class="w3-quarter">
           <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
@@ -133,8 +141,75 @@
         </div>
       </div>
     </div>
-    <<<<<<< HEAD======={{!-- <!DOCTYPE html>
+
+    {{!--
+    <!DOCTYPE html>
+    <html>
+
+    <head>
+      <style>
+        body {
+          background-image: url('makeupcollage.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+      </style>
+    </head>
+
+    <div class="index-selection">
+      <h1>{{title}} 🚀</h1>
+
+
+    </div> --}}
+
+
+    {{!-- <style>
+      body {
+        background-image: url('makeupcollage.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style> --}}
+
+    {{!-- <h1 style="text-align: center;"></h1> --}}
+
+    {{!-- <a href="/about"> About Us</a>
+
+    <a href="/auth/signup"> Sign-Up</a>
+    <a href="/auth/login"> Login</a> --}}
+
+    {{!-- <a href="/rankings"> Product Search</a>
+    <a href="/user/profile">Profile Page</a> --}}
+
+    {{!-- <h1>{{title}} 🚀</h1>
+    <p>Welcome Ironhacker!</p> --}}
+
+
+
+    {{!-- <a href="/auth/login"> Login</a> --}}
+
+
+
+    {{!--
+    <a href="/rankings/edit/{{id}}">Edit</a>
+
+    <a href="/rankings/delete/{{id}}">Delete</a>
+
+    <a href="/rankings/delete/{{id}}">Delete</a> --}}
+
+
+    {{!-- <a href="/auth/login"> Login</a> --}}
+
+    {{!-- <a href="/product"> Products List </a>
+    <a href="/collection/create"> Create Collection </a> --}}
+
+
+
+{{!-- <!DOCTYPE html>
       <html>
+
 
       <head>
         <style>
@@ -215,11 +290,37 @@
         </style>
       </head>
 
+
+    <div class="container">
+      <a href="#about" id="learn-text" class="centered">Learn
+        more and start today</a>
+
+      <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" width="1550" alt="">
+
+    </div>
+
       <div class="index-selection">
         <h1>{{title}} 🚀</h1>
 
 
       </div> --}}
+
+
+    <style>
+      .container {
+        position: relative;
+        text-align: center;
+        color: white;
+        font-size: 100px;
+      }
+
+      .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
 
 
       {{!-- <style>
@@ -232,6 +333,7 @@
       </style> --}}
 
       {{!-- <h1 style="text-align: center;"></h1> --}}
+
 
       {{!-- <a href="/about"> About Us</a>
 
@@ -308,6 +410,45 @@
           class="w3-hover-text-green">Ironhack</a></p>
     </footer>
 
+
+
+
+  {{!--
+  <script>
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+  </script> --}}
+  <footer class="w3-center w3-black w3-padding-64">
+    <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <div class="w3-xlarge w3-section">
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+    <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
+        class="w3-hover-text-green">Ironhack</a></p>
+  </footer>
+
+  {{!--
+  <script>
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+  </script> --}}
+
+
     {{!--
     <script>
       // Modal Image Gallery
@@ -318,7 +459,7 @@
         captionText.innerHTML = element.alt;
       }
     </script> --}}
-    <<<<<<< HEAD=======<footer class="w3-center w3-black w3-padding-64">
+    <footer class="w3-center w3-black w3-padding-64">
       <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
       <div class="w3-xlarge w3-section">
         <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -342,8 +483,7 @@
           captionText.innerHTML = element.alt;
         }
       </script> --}}
-      >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
-
+    
 
 </body>
 
