--- a/views/pages/list.hbs
+++ b/views/pages/list.hbs
@@ -21,7 +21,7 @@
                     <a href="/product/favorite-product/{{_id}}" class="btn btn-outline-dark btn-sm">View Details</a>
                     {{!-- <a href="/{{id}}/edit" class="btn btn-outline-dark btn-sm">Edit Product</a> --}}
                     {{!-- <a href="/rankings/delete/{{id}}" class="btn btn-dark btn-sm">Delete Product</a> --}}
-                    <a href="/collection/create/" class="btn btn-success">Add Favorite</a>
+                    {{!-- <a href="/collection/create/" class="btn btn-success">Add Favorite</a> --}}
                 </div>
                 <form id="create-product-list" method="POST">
 
