about us update

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,4 +1,4 @@
-<!-- Team Section -->
+{{!-- <!-- Team Section -->
 <div class="w3-container" style="padding:128px 16px" id="About">
    <h1 style="text-align: center;">About Us</h1>
    <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
 
 
@@ -61,7 +61,7 @@
 
 
 
-{{!-- <div class="about-section">
+<div class="about-section">
   <h1 style="text-align: center;">About Us</h1>
   <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a
     makeup up app from scratch. </p>
@@ -73,7 +73,7 @@
   <div class="column">
     <div class="card">
       <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
-        style="width:100%">
+        style="width:40%">
       <div class="container">
         <h3>Callie Doles</h3>
         <p class="title">Web Development Coder</p>
@@ -86,8 +86,8 @@
 
   <div class="column">
     <div class="card">
-      <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
-        style="width:100%">
+  <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
+        style="width:40%">
       <div class="container">
         <h3>Rebecca Sundel</h3>
         <p class="title">Web Development Coder</p>
@@ -102,7 +102,7 @@
   <div class="column">
     <div class="card">
       <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
-        style="width:100%">
+        style="width:40%">
       <div class="container">
         <h3>Dria Thomas</h3>
         <p class="title">Web Development Coder</p>
@@ -112,4 +112,4 @@
       </div>
     </div>
   </div>
-</div> --}}
+</div>
