--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,7 @@
             <a href="/auth/signup" class="w3-bar-item w3-button">Sign-Up</a>
             <a href="/auth/login" class="w3-bar-item w3-button">Login</a>
             <a href="/auth/logout" class="w3-bar-item w3-button">Logout</a>
-            <a href="/collection/upload/" class="w3-bar-item w3-button">Upload Image</a>
+            {{!-- <a href="/collection/upload/" class="w3-bar-item w3-button">Upload Image</a> --}}
 
           </ul>
         </div>
@@ -71,7 +71,7 @@
         </a>
       </div>
     </div>
-    
+
     <!-- Sidebar on small screens when clicking the menu icon -->
     <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large"
       style="display:none" id="mySidebar">
@@ -91,10 +91,10 @@
       <div class="w3-display-left w3-text-white" style="padding:48px">
         <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
         <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
-    <p><a href="#about" id="learn-text"
-        class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
-        more and start today</a></p>
-  </div> 
+        <p><a href="#about" id="learn-text"
+            class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
+            more and start today</a></p>
+      </div>
     </header>
 
 
@@ -107,20 +107,21 @@
         <div class="w3-quarter">
           <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
           <p class="w3-large">Responsive</p>
-          <p>If you have a particular makeup look you want to find, simply upload the image and let our database for you.</p>
+          <p>If you have a particular makeup look you want to find, simply upload the image and let our database for
+            you.</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Passion</p>
-          <p>Like a certain look? Save all of your favorite looks with a simple click into your favorites section in your profile.</p>
+          <p>Like a certain look? Save all of your favorite looks with a simple click into your favorites section in
+            your profile.</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-<<<<<<< HEAD
-          HEAD <a href="http://localhost:3000/rankings">Clourpop</a>
-=======
           <a href="http://localhost:3000/rankings"></a>
->>>>>>> 319eb8dd57a13ed224eb190fd7e043ebe0dcdcf1
+          {{!--
+          <a href="http://localhost:3000/rankings"></a> --}}
+
 
           <p class="w3-large">Design</p>
           <p>Create different unique collections based on the different makeup brands shown in our database.</p>
@@ -128,7 +129,8 @@
         <div class="w3-quarter">
           <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Support</p>
-          <p>Our team works fast and efficiently to make sure we respond to everyone promptly. Your needs are our needs.</p>
+          <p>Our team works fast and efficiently to make sure we respond to everyone promptly. Your needs are our needs.
+          </p>
         </div>
       </div>
     </div>
@@ -202,128 +204,57 @@
 
 
 
-    
-
-<<<<<<< HEAD
-    {{!-- <h1>{{title}} 🚀</h1>
-    <p>Welcome Ironhacker!</p> --}}
 
 
 
-    {{!-- <a href="/auth/login"> Login</a> --}}
+
+
+    <!-- Footer -->
 
 
 
     {{!--
-    <a href="/rankings/edit/{{id}}">Edit</a>
+    <script>
+      // Modal Image Gallery
+      function onClick(element) {
+        document.getElementById("img01").src = element.src;
+        document.getElementById("modal01").style.display = "block";
+        var captionText = document.getElementById("caption");
+        captionText.innerHTML = element.alt;
+      }
+    </script> --}}
+    <footer class="w3-center w3-black w3-padding-64">
+      <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+      <div class="w3-xlarge w3-section">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-snapchat w3-hover-opacity"></i>
+        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+      </div>
+      <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
+          class="w3-hover-text-green">Ironhack</a></p>
+    </footer>
 
-    <a href="/rankings/delete/{{id}}">Delete</a>
 
-    <a href="/rankings/delete/{{id}}">Delete</a> --}}
+    <script>
+      // Toggle between showing and hiding the sidebar when clicking the menu icon
+      var mySidebar = document.getElementById("mySidebar");
 
-
-    {{!-- <a href="/auth/login"> Login</a> --}}
-
-    {{!-- <a href="/product"> Products List </a>
-    <a href="/collection/create"> Create Collection </a> --}}
-
-
-    <div class="container">
-      <a href="#about" id="learn-text" class="centered">Learn
-        more and start today</a>
-
-      <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" width="1550" alt="">
-
-    </div>
-
-    <style>
-      .container {
-        position: relative;
-        text-align: center;
-        color: white;
-        font-size: 100px;
+      function w3_open() {
+        if (mySidebar.style.display === 'block') {
+          mySidebar.style.display = 'none';
+        } else {
+          mySidebar.style.display = 'block';
+        }
       }
 
-      .centered {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+      // Close the sidebar with the close button
+      function w3_close() {
+        mySidebar.style.display = "none";
       }
-    </style>
-
-
-
-
-    {{!--
-    <!-- Image of location/map -->
-    <img src="https://gisgeography.com/wp-content/uploads/2020/06/Miami-Map-Feature.jpg" class="w3-image w3-greyscale"
-      style="width:100%;margin-top:48px">
-  </div>
-  </div> --}}
-=======
-   
->>>>>>> 319eb8dd57a13ed224eb190fd7e043ebe0dcdcf1
-
-
-  <!-- Footer -->
-
-
-
-  {{!--
-  <script>
-    // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
-    }
-  </script> --}}
-  <footer class="w3-center w3-black w3-padding-64">
-    <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-    <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
-        class="w3-hover-text-green">Ironhack</a></p>
-  </footer>
-
-
-  <script>
-<<<<<<< HEAD
-    // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
-    }
-  </script> --}}
-
-=======
-    // Toggle between showing and hiding the sidebar when clicking the menu icon
-var mySidebar = document.getElementById("mySidebar");
-
-function w3_open() {
-  if (mySidebar.style.display === 'block') {
-    mySidebar.style.display = 'none';
-  } else {
-    mySidebar.style.display = 'block';
-  }
-}
-
-// Close the sidebar with the close button
-function w3_close() {
-    mySidebar.style.display = "none";
-}
-</script>
->>>>>>> 319eb8dd57a13ed224eb190fd7e043ebe0dcdcf1
+    </script>
 
 
 </body>
