--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,7 +80,7 @@
       <a href="/product" onclick="w3_close()" class="w3-bar-item w3-button">ALL PRODUCTS</a>
       <a href="/rankings" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCT SEARCH</a>
       <a href="/collection/create" onclick="w3_close()" class="w3-bar-item w3-button">CREATE COLLECTION</a>
-      <a href="/user/profile" onclick="w3_close()" class="w3-bar-item w3-button">MY PROFILE</a>
+      {{!-- <a href="/user/profile" onclick="w3_close()" class="w3-bar-item w3-button">MY PROFILE</a> --}}
       <a href="/auth/logout" onclick="w3_close()" class="w3-bar-item w3-button">LOGOUT</a>
     </nav>
 
