--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -59,7 +59,6 @@
 
    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="/">
-         <img src="/img/logo.svg" width="30" height="30" alt="Logo" class="d-inline-block align-top"> {{siteTitle}}
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -76,7 +75,7 @@
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/collection/create"> Create Collection </a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/user/profile"> Profile Page </a> </li>
+            {{!-- <li class="nav-item"> <a class="nav-link" href="/user/profile"> Profile Page </a> </li> --}}
 
 
          </ul>
