--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,9 +1,16 @@
+
+<!-- Team Section -->
+{{!-- <div class="w3-container" style="padding:128px 16px" id="About">
+  <h1 style="text-align: center;">About Us</h1>
+  <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a
+
 {{!-- <!-- Team Section -->
 <div class="w3-container" style="padding:128px 16px" id="About">
    <h1 style="text-align: center;">About Us</h1>
    <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a
+
     makeup up app from scratch. </p>
-    <p>It took a lot of hard work and commnuication, but we had a lot fun and liked what we created.</p>
+  <p>It took a lot of hard work and commnuication, but we had a lot fun and liked what we created.</p>
   <h3 class="w3-center">THE TEAM</h3>
   <p class="w3-center w3-large">The ones who runs this company</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
@@ -52,7 +59,12 @@
       </div>
     </div>
   </div>
+
+</div>
+--}}
+
 </div> --}}
+
 
 
 
@@ -86,7 +98,11 @@
 
   <div class="column">
     <div class="card">
+
+      <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
+
   <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
+
         style="width:40%">
       <div class="container">
         <h3>Rebecca Sundel</h3>
