--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,4 +1,5 @@
-{{!-- <!DOCTYPE html>
+{{!--
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -36,7 +37,7 @@
 
 </body>
 
-</html>  --}}
+</html> --}}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -50,18 +51,17 @@
    </script>
 
    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'>
-   
+
    <link rel='stylesheet' href="/css/style.css" />
 </head>
 
 <body>
 
    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-       <a class="navbar-brand" href="/">
-         <img src="/img/logo.svg" width="30" height="30" alt="Logo" class="d-inline-block align-top"> {{siteTitle}}
+      <a class="navbar-brand" href="/">
       </a>
 
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
       </button>
@@ -75,7 +75,7 @@
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/collection/create"> Create Collection </a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/user/profile"> Profile Page </a> </li>
+            {{!-- <li class="nav-item"> <a class="nav-link" href="/user/profile"> Profile Page </a> </li> --}}
 
 
          </ul>
@@ -93,11 +93,10 @@
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
       crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" 
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
       crossorigin="anonymous"></script>
-   
+
    <script src="/js/script.js"></script>
 </body>
 
-</html> 
-
+</html>
