--- a/views/pages/edit.hbs
+++ b/views/pages/edit.hbs
@@ -5,7 +5,6 @@
 {{description}} --}}
 <form action="/collection/create/edit/{{_id}}" method="post">
         <input type="hidden" name="_id" value="{{_id}}">
-
         <div class="form-group col-md-4"></div>
         <div class="col-md-4 mb-2">
                 <label>Collection Name</label>
@@ -50,24 +49,6 @@
         <input type="radio" id="warm" name="undertone" value="warm">
         <label for="warm">Warm</label><br>
 
-        <label>
-                Name:
-                <input type="text" name="name" value="{{name}}">
-        </label>
-        <br>
-
-        <label>
-                Brand:
-                <input type="text" name="brand" value="{{brand}}">
-        </label>
-        <br>
-        <label>
-                Description:
-                <textarea name="description" cols="30" rows="5"> {{description }} </textarea>
-        </label>
-        <br>
-
-
 
 
         <button type="submit">Save changes</button>
@@ -76,13 +57,11 @@
 
         {{!-- <form action="/create/delete/{{_id}}" method="POST">
                 <button>🗑 DELETE</button> --}}
-
         </form>
         <style>
 
-
+        </style>
 
         </style>
 
-        </form>
-
+</form>
